--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Treasure Hunt Scoring</title>
   <link rel="stylesheet" href="style.css">
+  <link src="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="logo.png" type="image/png">
+
 </head>
 
 <body>
