added a link of the fevicon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Treasure Hunt Scoring</title>
   <link rel="stylesheet" href="style.css">
   <link src="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="logo.png" type="image/png">
+  <link rel="icon" href="https://github.com/rinkudiwakar/scoreCalculator/blob/main/logo.png" type="image/png">
 
 </head>
 
